# ItalianPlug

./: .gitignore  .gitmodules  CMakeLists.txt  get_sources.sh  standardization.py
Scripts/: matrices.py  normalize.py  plot.py  plot_classes.py  plot_hists.py  roc.py  shapes_hist.py
shaders/: basic_fragment.glsl  basic_vertex.glsl  blank_vertex.glsl  edge_fragment.glsl
src/: ExtractFeatures.cpp  annoylib.h  camera.cpp  camera.hpp  convex_hull.cpp  convex_hull.hpp  descriptors.cpp  descriptors.hpp  earth_movers_distance.hpp  evaluation.cpp  features_extractor.cpp  histogram.hpp  input_handler.cpp  input_handler.hpp  italianplug.cpp  main.cpp  mesh.cpp  mesh.cpp.orig  mesh.hpp  mesh_base.cpp  mesh_base.hpp  mesh_map.cpp  mesh_map.hpp  mesh_repair.cpp  mesh_repair.hpp  mman.h  normalization.cpp  normalization.hpp  normalizer.cpp  quickhull.h  rapidcsv.h  renderer.cpp  renderer.cpp.orig  renderer.hpp  retrieval.cpp  shader.cpp  shader.hpp  shader_map.cpp  shader_map.hpp  shape_retriever.cpp  (+10 more)
